# mailpilot

./: .envrc  .gitignore  CLAUDE.md  README.md  SPEC.md  makefile  pyproject.toml  test-email.eml
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: ci.yml
docs/: adr-01-gmail-api-integration.md  adr-02-email-body-storage-strategy.md  adr-03-gmail-watch-implementation.md  adr-03-workflow-model.md  adr-04-email-routing.md  adr-04-schema-migration-strategy.md  adr-05-schema-migration-strategy.md  adr-06-workflow-field-definitions.md  adr-07-observability-with-logfire.md  adr-08-crm-design.md  adr-08-crm-evolution.md  adr-09-knowledge-base-rag.md  email-flow.md  logfire-instrumentation-plan.md
docs/superpowers/plans/: 2026-04-22-workflow-cli-redesign.md  2026-04-22-workflow-execution-loop.md  2026-04-23-html-email.md  2026-04-23-llm-observability.md  2026-04-23-reply-email-tool.md  2026-04-25-enrollment-rename.md  2026-04-26-email-reply-cli.md  2026-04-28-adr-08-refinements.md
docs/superpowers/specs/: 2026-04-21-unified-list-filters-design.md  2026-04-21-workflow-cli-redesign.md  2026-04-21-workflow-contact-cli-design.md  2026-04-22-workflow-execution-loop.md  2026-04-23-html-email-design.md  2026-04-23-llm-observability-design.md  2026-04-23-smoke-test-skill-design.md  2026-04-25-enrollment-rename-design.md  2026-04-26-email-reply-cli-design.md
src/mailpilot/: __init__.py  __main__.py  cli.py  database.py  drive.py  email_ops.py  email_renderer.py  exceptions.py  gmail.py  models.py  operator_log.py  pubsub.py  routing.py  run.py  schema.sql  settings.py  sync.py
src/mailpilot/agent/: __init__.py  classify.py  invoke.py  tools.py
tests/: conftest.py  test_agent_invoke.py  test_agent_invoke_operator_log.py  test_agent_invoke_trigger.py  test_agent_tools.py  test_classify.py  test_cli.py  test_database.py  test_database_telemetry.py  test_drive.py  test_email_ops.py  test_email_renderer.py  test_gmail_utils.py  test_models.py  test_observability.py  test_operator_log.py  test_pubsub.py  test_routing.py  test_routing_operator_log.py  test_run.py  test_settings.py  test_sync.py  test_sync_loop_operator_log.py  test_workflow_theme.py
tests/e2e/: test_sync_smoke.py
